--- a/Front-End/index.html
+++ b/Front-End/index.html
@@ -6,7 +6,6 @@
   <title>My React App</title>
 </head>
 <body>
-  <div id="root"></div>
-  <script src="index.js" type="module"></script>
+  <h1> Hello World!</h1>
 </body>
 </html>
