--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Welcome to LHOK</h1>
-    <button onclick="showMessage()">Click Me</button>
+    <button onclick="showMessage()">Join LHOK</button>
     <script src="script.js"></script>
 </body>
 </html>
