updated comments and css

--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My First Website</title>
-    <link rel="stylesheet" href="style.css">
+<!DOCTYPE html> <!-- Declares the document type and version of HTML (HTML5) -->
+<html lang="en"> <!-- The start of the HTML document, and "en" specifies that the language is English -->
+<head> <!-- The head section contains metadata for the document -->
+    <meta charset="UTF-8"> <!-- Specifies the character encoding for the document, UTF-8 is a standard for most languages -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Ensures the page is responsive on different screen sizes -->
+    <title>My First Website</title> <!-- Sets the title of the webpage that appears in the browser tab -->
+    <link rel="stylesheet" href="style.css"> <!-- Links to an external CSS file for styling the webpage -->
 </head>
-<body>
-    <h1>Welcome to LHOK</h1>
-    <button onclick="showMessage()">Join LHOK</button>
-    <script src="script.js"></script>
+<body> <!-- The body of the page, which contains the visible content -->
+    <h1>Welcome to LHOK</h1> <!-- A main header that displays the message "Welcome to LHOK" -->
+    <h2>LHOK beauty for EVERYONE</h2> <!-- A subheading with a tagline below the main header -->
+    <button onclick="showMessage()">Click Me</button> <!-- A button that triggers the showMessage() function when clicked -->
+    <script src="script.js"></script> <!-- Links to an external JavaScript file (script.js) that contains behavior -->
 </body>
-</html>
