Update picture path

--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <h1>Welcome to LHOK</h1> <!-- A main header that displays the message "Welcome to LHOK" -->
     <h2>LHOK beauty for EVERYONE</h2> <!-- A subheading with a tagline below the main header -->
     <button onclick="showMessage()">Click Me</button> <!-- A button that triggers the showMessage() function when clicked -->
-    <img src="lhok 5.30.24.png" alt="My Photo">
+    <img src="Media/lhok 5.30.24.png" alt="My Photo">
     <script src="script.js"></script> <!-- Links to an external JavaScript file (script.js) that contains behavior -->
 </body>
