--- a/index.html
+++ b/index.html
@@ -6,10 +6,17 @@
     <title>My First Website</title> <!-- Sets the title of the webpage that appears in the browser tab -->
     <link rel="stylesheet" href="style.css"> <!-- Links to an external CSS file for styling the webpage -->
 </head>
+
+
 <body> <!-- The body of the page, which contains the visible content -->
     <h1>Welcome to LHOK</h1> <!-- A main header that displays the message "Welcome to LHOK" -->
     <h2>LHOK beauty for EVERYONE</h2> <!-- A subheading with a tagline below the main header -->
     <button onclick="showMessage()">Click Me</button> <!-- A button that triggers the showMessage() function when clicked -->
+    
+    <div class="image-container">
     <img src="Media/lhoklogo.png" alt="My Photo" width="200" height=auto>
+    </div>
+
     <script src="script.js"></script> <!-- Links to an external JavaScript file (script.js) that contains behavior -->
 </body>
+</html>
