--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body> <!-- The body of the page, which contains the visible content -->
     <h1>Welcome to LHOK</h1> <!-- A main header that displays the message "Welcome to LHOK" -->
-    <h2>LHOK beauty for dragon</h2> <!-- A subheading with a tagline below the main header -->
+    <h2>LHOK beauty for goldfishes</h2> <!-- A subheading with a tagline below the main header -->
     <button onclick="showMessage()">Click Me</button> <!-- A button that triggers the showMessage() function when clicked -->
     
     <div class="image-container">
