--- a/index.html
+++ b/index.html
@@ -12,7 +12,13 @@
     
     <!-- Header section starts -->
     <header> <!-- A semantic HTML5 element used to define a header section -->
-        <h1>LHOK</h1> <!-- Displays the site or brand name inside the header -->
+        <div class="header-content"> <!-- Container to hold and organize header elements -->
+            <h1 class="logo">LHOK</h1> <!-- Logo/brand name on the left -->
+            <nav class="header-nav"> <!-- Navigation container for the links -->
+                <a href="#about" class="nav-link">About Us</a> <!-- About Us navigation link -->
+                <a href="#contact" class="nav-link">Contact Us</a> <!-- Contact Us navigation link -->
+            </nav>
+        </div>
     </header>
     <!-- Header section ends -->
 
@@ -28,8 +34,6 @@
     <!-- Footer section starts -->
     <footer> <!-- A semantic HTML5 element used to define a footer section -->
         <p>&copy; 2025 LHOK. All rights reserved.</p> <!-- Footer text with copyright -->
-        
-
     </footer>
     <!-- Footer section ends -->
 
