Replacing the LHOK word with the logo
Angie moving the Logo to middle of the header

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <!-- Header section starts -->
     <header> <!-- A semantic HTML5 element used to define a header section -->
         <div class="header-content"> <!-- Container to hold and organize header elements -->
-            <h1 class="logo">LHOK</h1> <!-- Logo/brand name on the left -->
+            <div class="logo">
+    <img src="Media/lhoklogo.png" alt="LHOK Logo">
+</div>
             <nav class="header-nav"> <!-- Navigation container for the links -->
                 <a href="#about" class="nav-link">About Us</a> <!-- About Us navigation link -->
                 <a href="#contact" class="nav-link">Contact Us</a> <!-- Contact Us navigation link -->
