Updated footer html structure

--- a/index.html
+++ b/index.html
@@ -38,9 +38,30 @@
     </div>
 
     <!-- Footer section starts -->
-    <footer> <!-- A semantic HTML5 element used to define a footer section -->
-        <p>&copy; 2025 LHOK. All rights reserved.</p> <!-- Footer text with copyright -->
-    </footer>
+<footer class="footer"> <!-- Footer with navigation links -->
+    <div class="footer-container">
+        <div class="footer-content">
+            <!-- Main Navigation Links -->
+            <div class="footer-section">
+                <ul class="footer-links">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="products.html">Products</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </div>
+        </div>
+        
+        <!-- Footer Bottom -->
+        <div class="footer-bottom">
+            <div class="footer-bottom-links">
+                <a href="privacy.html">Privacy</a>
+                <a href="terms.html">Terms</a>
+            </div>
+            <p>&copy; 2025 LHOK. All rights reserved.</p>
+        </div>
+    </div>
+</footer>
     <!-- Footer section ends -->
 
     <script src="script.js"></script> <!-- Loads the external JavaScript file -->
