have logo in footer

--- a/index.html
+++ b/index.html
@@ -40,13 +40,17 @@
     <!-- Footer section starts -->
 <footer class="footer"> <!-- Footer with navigation links -->
     <div class="footer-container">
+        <div class="footer-logo">
+            <img src="Media/lhoklogo.png" alt="LHOK Logo">
+        </div>
+        
         <div class="footer-content">
             <!-- Main Navigation Links -->
             <div class="footer-section">
                 <ul class="footer-links">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
-                    <li><a href="products.html">Products</a></li>
+                    <li><a href="privacyPolicy.html">Privacy Policy</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
