update nav links

--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
             
             <!-- Right Links -->
             <div class="footer-links-right">
-                <a href="products.html">Products</a>
-                <a href="contact.html">Contact</a>
+                <a href="#Lhok for a Professional" class="nav-link">Start Lhoking</a>
+                <a href="#contact" class="nav-link">Contact Us</a>
             </div>
         </div>
         
