--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
             <div class="footer-links-left">
                 <a href="index.html">Home</a>
                 <a href="about.html">About</a>
+                <a href="#Home" class="nav-link">Home</a>
+                <a href="#About Us" class="nav-link">About Us</a>
             </div>
             
             <!-- Center Logo -->
