footer style exp

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="footer-container">
         <div class="footer-content">
             <!-- Left Links -->
-            <div class="footer-links-left">
+            <div class="footer-links-right">
                 <a href="#Home" class="nav-link">Home</a>
                 <a href="#About Us" class="nav-link">About Us</a>
             </div>
