--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="footer-container">
         <div class="footer-content">
             <!-- Left Links -->
-            <div class="footer-links-right">
+            <div class="footer-links">
                 <a href="#Home" class="nav-link">Home</a>
                 <a href="#About Us" class="nav-link">About Us</a>
             </div>
@@ -53,7 +53,7 @@
             </div>
             
             <!-- Right Links -->
-            <div class="footer-links-right">
+            <div class="footer-links">
                 <a href="#Lhok for a Professional" class="nav-link">Start Lhoking</a>
                 <a href="#contact" class="nav-link">Contact Us</a>
             </div>
