Beauty for Salamanders

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <!-- Header section ends -->
 
     <h1>Welcome to LHOK</h1> <!-- Main heading shown on the page -->
-    <h2>LHOK beauty for foxes</h2> <!-- Subheading with a short description -->
+    <h2>LHOK beauty for Salamanders</h2> <!-- Subheading with a short description -->
         
     <button onclick="showMessage()">Click Me</button> <!-- A button that will show an alert when clicked -->
 
