change html main

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8"> <!-- Sets the character encoding to UTF-8 -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Makes the site responsive on all screen sizes -->
     <title>My First Website</title> <!-- Sets the title of the webpage shown in the browser tab -->
-    <link rel="stylesheet" href="main.css"> <!-- Links to the external CSS file for styling -->
+    <link rel="stylesheet" href="CSS/main.css"> <!-- Links to the external CSS file for styling -->
 </head>
 
 <body> <!-- Begins the body of the HTML document (everything inside is visible on the page) -->
