Angie trying to add Adding grids
taking a shot at it

--- a/index.html
+++ b/index.html
@@ -70,4 +70,11 @@
     <script src="script.js"></script> <!-- Loads the external JavaScript file -->
 </body> <!-- Ends the body section -->
 
+
+<div class="grid place-items-center" style="min-height: 100vh;">
+  <div>
+    <h1>Your centered text</h1>
+    <p>More content here</p>
+  </div>
+</div>
 </html> <!-- Closes the HTML document -->
