angie putting in text
trying to put more of the site into the page

--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
 </body> <!-- Ends the body section -->
 
 
-<div class="grid place-items-center" style="min-height: 100vh;">
+<div class="grid place-items-left" style="min-height: 100vh;">
   <div>
-    <h1>Your centered text</h1>
-    <p>More content here</p>
+    <h1>Your left text</h1>
+    <p>Welcome to Lhok! We aim to link beauty industry professionals with nearby clients seeking their services. Our mission is all about fostering connections to empower both professionals and clients alike. We'd like to welcome you to sign up for the waitlist! We have exciting features coming like simplified booking, intuitive mapping and reliable reviews. We're lhoking forward to our journey together, and lhok forward to building our Canadian community! ‍</p>
   </div>
 </div>
 </html> <!-- Closes the HTML document -->
