--- a/index.html
+++ b/index.html
@@ -71,10 +71,21 @@
 </body> <!-- Ends the body section -->
 
 
-<div class="grid place-items-left" style="min-height: 100vh;">
-  <div>
-    <h1>Your left text</h1>
-    <p>Welcome to Lhok! We aim to link beauty industry professionals with nearby clients seeking their services. Our mission is all about fostering connections to empower both professionals and clients alike. We'd like to welcome you to sign up for the waitlist! We have exciting features coming like simplified booking, intuitive mapping and reliable reviews. We're lhoking forward to our journey together, and lhok forward to building our Canadian community! ‍</p>
+<div class="page-container">
+  <div class="content-wrapper">
+    <div class="text-section">
+      <h1>Join Lhok Today</h1>
+      <p>Welcome to Lhok! We aim to link beauty industry professionals...</p>
+      <p>We'd like to welcome you to sign up for the waitlist...</p>
+      <button>Join Lhok</button>
+    </div>
+    
+    <div class="image-grid">
+      <img src="image1.jpg" alt="">
+      <img src="image2.jpg" alt="">
+      <img src="image3.jpg" alt="">
+      <img src="image4.jpg" alt="">
+    </div>
   </div>
 </div>
 </html> <!-- Closes the HTML document -->
