--- a/index.html
+++ b/index.html
@@ -40,10 +40,11 @@
     </div>
     
     <div class="image-grid">
-      <img src="image1.jpg" alt="Beauty service 1">
-      <img src="image2.jpg" alt="Beauty service 2">
-      <img src="image3.jpg" alt="Beauty service 3">
-      <img src="image4.jpg" alt="Beauty service 4">
+  <img src="Media/image1.jpg" alt="Beauty service 1">
+  <img src="Media/image2.jpg" alt="Beauty service 2">
+  <img src="Media/image3.jpg" alt="Beauty service 3">
+  <img src="Media/image4.jpg" alt="Beauty service 4">
+</div>
     </div>
   </div>
 </div>
