--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My First Website</title>
     <link rel="stylesheet" href="CSS/main.css">
-    <link rel="stylesheet" href="grid.css"> <!-- MOVED HERE -->
+    <link rel="stylesheet" href="grid.css">
 </head>
 
 <body>
@@ -40,11 +40,10 @@
     </div>
     
     <div class="image-grid">
-  <img src="Media/image1.jpg" alt="Beauty service 1">
-  <img src="Media/image2.jpg" alt="Beauty service 2">
-  <img src="Media/image3.jpg" alt="Beauty service 3">
-  <img src="Media/image4.jpg" alt="Beauty service 4">
-</div>
+      <img src="Media/image1.jpg" alt="Beauty service 1">
+      <img src="Media/image2.jpg" alt="Beauty service 2">
+      <img src="Media/image3.jpg" alt="Beauty service 3">
+      <img src="Media/image4.jpg" alt="Beauty service 4">
     </div>
   </div>
 </div>
