--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My First Website</title>
     <link rel="stylesheet" href="CSS/variables.css">
     <link rel="stylesheet" href="CSS/main.css">
 
@@ -34,9 +33,9 @@
 <div class="page-container">
   <div class="content-wrapper">
     <div class="text-section">
-      <title class="title-text">Join Lhok Today</title>
-      <p>Welcome to Lhok! We aim to link beauty industry professionals with nearby clients seeking their services. Our mission is all about fostering connections to empower both professionals and clients alike.</p>
-      <p>We'd like to welcome you to sign up for the waitlist! We have exciting features coming like simplified booking, intuitive mapping and reliable reviews. We're lhoking forward to our journey together, and lhok forward to building our Canadian community!</p>
+      <title-text class="title-text">Join Lhok Today</title-text>
+      <p class="normal-text">Welcome to Lhok! We aim to link beauty industry professionals with nearby clients seeking their services. Our mission is all about fostering connections to empower both professionals and clients alike.</p>
+      <p class="normal-text">We'd like to welcome you to sign up for the waitlist! We have exciting features coming like simplified booking, intuitive mapping and reliable reviews. We're lhoking forward to our journey together, and lhok forward to building our Canadian community!</p>
       <button>Join Lhok</button>
     </div>
     
