--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <div class="footer-links-right">
     <a href="#Lhok for a Professional" class="footer-nav-link">Start Lhoking</a>
     <a href="#contact" class="footer-nav-link">Contact Us</a>
-    <a href="https://www.instagram.com/lhok.ca/" class="footer-nav-link" target="_blank">Follow Us</a>
+    <a href="https://www.instagram.com/lhok.ca/" class="footer-nav-link" target="_blank">Instagram</a>
 </div>
         </div>
         
