--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
                 <img src="Media/lhoklogo.png" alt="LHOK Logo">
             </div>
             
-            <div class="footer-links-right">
-    <a href="#Lhok for a Professional" class="footer-nav-link">Start Lhoking</a>
-    <a href="#contact" class="footer-nav-link">Contact Us</a>
+            <div class="footer-links-left">
+    <a href="#Home" class="footer-nav-link">Home</a>
+    <a href="#About Us" class="footer-nav-link">About Us</a>
     <a href="https://www.instagram.com/lhok.ca/" class="footer-nav-link" target="_blank">Instagram</a>
 </div>
         </div>
