--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             </div>
             
             <div class="footer-links-right">
-                <a href="Contact Us" class="footer-nav-link">Contact Us</a>
+                <a href="#Contact Us" class="footer-nav-link">Contact Us</a>
                 <a href="#Lhok for a Professional" class="footer-nav-link">Start Lhoking</a>
             </div>
         </div>
