--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             
             <div class="footer-links-right">
                 <a href="#Contact Us" class="footer-nav-link">Contact Us</a>
-                <a href="#Lhok for a Professional" class="footer-nav-link">Start Lhoking</a>
+                <a href="https://www.instagram.com/lhok.ca/" class="footer-nav-link">Start Lhoking</a>
             </div>
         </div>
         
