Angie adding some padding on the "Join Lhok"

--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
       <title-text class="title-text">Join Lhok Today</title-text>
       <p class="normal-text">Welcome to Lhok! We aim to link beauty industry professionals with nearby clients seeking their services. Our mission is all about fostering connections to empower both professionals and clients alike.</p>
       <p class="normal-text">We'd like to welcome you to sign up for the waitlist! We have exciting features coming like simplified booking, intuitive mapping and reliable reviews. We're lhkoking forward to our journey together, and lhok forward to building our Canadian community!</p>
-      <a href="https://www.instagram.com/lhok.ca/" class="body-nav-link" target="_blank">Join Lhok</a>
-      </a>
+      <Landing-button href="https://www.instagram.com/lhok.ca/" class="body-nav-link" target="_blank">Join Lhok</Landing-button>
     </div>
     
     <div class="image-grid">
