--- a/landing.html
+++ b/landing.html
@@ -23,7 +23,7 @@
         </div>
         
         <nav class="header-nav-right">
-            <a href="#contact" class="nav-link">Contact Us</a>
+            <a href="contact-us.html" class="nav-link">Contact Us</a>
         </nav>
     </div>
 </header>
@@ -62,7 +62,7 @@
             </div>
             
             <div class="footer-links-right">
-                <a href="#Contact Us" class="footer-nav-link">Contact Us</a>
+                <a href="" class="footer-nav-link">Contact Us</a>
                 <a href="https://www.instagram.com/lhok.ca/" class="footer-nav-link">Start Lhoking</a>
             </div>
         </div>
