undo index.html name change

--- a/contact-us.html
+++ b/contact-us.html
@@ -15,11 +15,11 @@
 <header>
     <div class="header-content">
         <nav class="header-nav-left">
-            <a href="landing.html#about" class="nav-link">About Us</a>
+            <a href="index.html#about" class="nav-link">About Us</a>
         </nav>
         
         <div class="logo">
-            <a href="landing.html">
+            <a href="index.html">
                 <img src="Media/lhoklogo.png" alt="LHOK Logo">
             </a>
         </div>
@@ -75,12 +75,12 @@
     <div class="footer-container">
         <div class="footer-content">
             <div class="footer-links-left">
-                <a href="landing.html" class="footer-nav-link">Home</a>
-                <a href="landing.html#about" class="footer-nav-link">About Us</a>
+                <a href="index.html" class="footer-nav-link">Home</a>
+                <a href="index.html#about" class="footer-nav-link">About Us</a>
             </div>
             
             <div class="footer-logo">
-                <a href="landing.html">
+                <a href="index.html">
                     <img src="Media/lhoklogo.png" alt="LHOK Logo">
                 </a>
             </div>
