Make Header Logo a link to home

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
         </nav>
         
         <div class="logo">
-            <img src="Media/lhoklogo.png" alt="LHOK Logo">
+            <a href = "index.html"> <!-- make logo a link to home page -->
+                <img src="Media/lhoklogo.png" alt="LHOK Logo">
+            </a>
         </div>
         
         <nav class="header-nav-right">
