fixing the images

--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
     </div>
     
     <div class="image-grid">
-      <img src="media/image1.jpg" alt="Beauty service 1">
-      <img src="media/image2.jpg" alt="Beauty service 2">
-      <img src="media/image3.jpg" alt="Beauty service 3">
-      <img src="media/image4.jpg" alt="Beauty service 4">
-    </div>
+  <img src="./media/image1.jpg" alt="Beauty service 1">
+  <img src="./media/image2.jpg" alt="Beauty service 2">
+  <img src="./media/image3.jpg" alt="Beauty service 3">
+  <img src="./media/image4.jpg" alt="Beauty service 4">
+</div>
   </div>
 </div>
 
