playing with the test

--- a/pages/tes-col.html
+++ b/pages/tes-col.html
@@ -9,6 +9,12 @@
     <link rel="stylesheet" href="../CSS/main.css">
     <link rel="stylesheet" href="gridtest.css">
     <style>
+        /* Grid definition - adding here to ensure it loads */
+        .grid {
+            display: grid;
+            grid-template-columns: 1fr 1fr 1fr 2fr 1fr;
+            grid-template-rows: 25px 100px 100px 100px;
+        }
         /* Adding the grid-item styles so you can see the grid cells */
         .grid-item {
             background-color: lightblue;
