--- a/pages/contact-us.html
+++ b/pages/contact-us.html
@@ -24,6 +24,88 @@
       <p class="normal-text">Follow us on Instagram to stay updated with the latest news and join our waitlist!</p>
       <a href="https://www.instagram.com/lhok.ca/" class="body-nav-link" target="_blank">Join Lhok</a>
     </div>
+
+    <!-- FORM STARTS HERE -->
+    <form id="contactForm" class="contact-form">
+        
+        <!-- Success/Error Message Area -->
+        <div id="formMessage" class="message"></div>
+        
+        <!-- Name Field -->
+        <div class="form-group">
+            <label for="name">Name :</label>
+            <input 
+                type="text" 
+                id="name" 
+                name="name" 
+                placeholder="Enter your full name"
+                required
+                minlength="2"
+            >
+            <span class="error-message" id="nameError"></span>
+        </div>
+
+        <!-- Email Field -->
+        <div class="form-group">
+            <label for="email">Email *</label>
+            <input 
+                type="email" 
+                id="email" 
+                name="email" 
+                placeholder="your.email@example.com"
+                required
+            >
+            <span class="error-message" id="emailError"></span>
+        </div>
+
+        <!-- Phone Field (Optional) -->
+        <div class="form-group">
+            <label for="phone">Phone (Optional)</label>
+            <input 
+                type="tel" 
+                id="phone" 
+                name="phone" 
+                placeholder="+1 (555) 123-4567"
+            >
+        </div>
+
+        <!-- Subject Field -->
+        <div class="form-group">
+            <label for="subject">Subject *</label>
+            <select id="subject" name="subject" required>
+                <option value="">Select a subject</option> <!-- This is visible when no selection made -->
+                <option value="general">General Inquiry</option>
+                <option value="support">Support</option>
+                <option value="partnership">Partnership</option>
+                <option value="feedback">Feedback</option>
+            </select>
+        </div>
+
+        <!-- Message Field -->
+        <div class="form-group">
+            <label for="message">Message *</label>
+            <textarea 
+                id="message" 
+                name="message" 
+                placeholder="Tell us what's on your mind..."
+                required
+                minlength="10"
+                rows="6"
+            ></textarea>
+            <span class="error-message" id="messageError"></span>
+            <span class="char-count">
+                <span id="charCount">0</span>/500 characters
+            </span>
+        </div>
+
+        <!-- Submit Button -->
+        <button type="submit" class="submit-btn" id="submitBtn">
+            <span class="btn-text">Send Message</span>
+            <span class="btn-loader" style="display: none;">●●●</span>
+        </button>
+    </form>
+    <!-- FORM ENDS HERE -->
+
   </div>
 </div>
 
