--- a/pages/tes-col.html
+++ b/pages/tes-col.html
@@ -63,7 +63,7 @@
     
     <!-- Row 2 (100px height) - showing column spans that add up to 5 -->
     <div class="grid-item span-2">Spans Cols 1-2</div>
-    <div class="grid-item span-3">Spans Cols 3-4</div>
+    <div class="grid-item span-3">Spans Cols 3-4-5</div>
     
     <!-- Row 3 (100px height) - Different spanning pattern -->
     <div class="grid-item">Col 1</div>
