--- a/pages/test-env.html
+++ b/pages/test-env.html
@@ -37,7 +37,7 @@
 <!-- Main content -->
 <div class="grid">
     <!-- Row 1 (25px height) - 5 columns -->
-    <div class="grid-item">1</div>
+    <div class="grid-item span-3">1</div>
     <div class="grid-item">2</div>
     <div class="grid-item">3</div>
     <div class="grid-item">4</div>
