--- a/pages/contact-us.html
+++ b/pages/contact-us.html
@@ -23,6 +23,7 @@
       <p class="normal-text">Have questions? We'd love to hear from you. Send us a message and we'll respond as soon as possible.</p>
       <p class="normal-text">Follow us on Instagram to stay updated with the latest news and join our waitlist!</p>
       <a href="https://www.instagram.com/lhok.ca/" class="body-nav-link" target="_blank">Join Lhok</a>
+      <div id="submit-button-placeholder"></div>  
     </div>
 
     <!-- FORM STARTS HERE -->
