--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
       <p class="normal-text">Welcome to Lhok! We aim to link beauty industry professionals with nearby clients seeking their services. Our mission is all about fostering connections to empower both professionals and clients alike.</p>
       <p class="normal-text">We'd like to welcome you to sign up for the waitlist! We have exciting features coming like simplified booking, intuitive mapping and reliable reviews. We're lhoking forward to our journey together, and lhok forward to building our Canadian community!</p>
       <index-button href="https://www.instagram.com/lhok.ca/" class="body-nav-link" target="_blank">Join Lhok</index-button>
+      <div id="submit-button-placeholder"></div>
+    
     </div>
     
     <div class="image-grid">
@@ -37,8 +39,6 @@
 <!-- Footer section starts -->
 <div id="footer-placeholder"></div>
 <!-- Footer section ends -->
-
-
 
     <script src="js/components.js"></script>
     <script src="js/main.js"></script>
