--- a/pages/contact-us.html
+++ b/pages/contact-us.html
@@ -22,8 +22,6 @@
       <h1 class="title-text">Contact Us</h1>
       <p class="normal-text">Have questions? We'd love to hear from you. Send us a message and we'll respond as soon as possible.</p>
       <p class="normal-text">Follow us on Instagram to stay updated with the latest news and join our waitlist!</p>
-      <a href="https://www.instagram.com/lhok.ca/" class="body-nav-link" target="_blank">Join Lhok</a>
-      <div id="submit-button-placeholder"></div>  
     </div>
 
     <!-- FORM STARTS HERE -->
@@ -116,7 +114,7 @@
 
     <script src="../js/components.js"></script>
     <script src="../js/main.js"></script>
-
+    <script type="module" src="../js/firebase-config.js"></script>
 </body>
 
 </html>
