--- a/pages/contact-us.html
+++ b/pages/contact-us.html
@@ -7,6 +7,7 @@
     <title>Contact Us - LHOK</title>
     <link rel="stylesheet" href="../CSS/variables.css">
     <link rel="stylesheet" href="../CSS/main.css">
+      <link rel="stylesheet" href="../CSS/pages/contact-us.css">
 </head>
 
 <body>
