--- a/pages/contact-us.html
+++ b/pages/contact-us.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us - LHOK</title>
-    <link rel="stylesheet" href="../css/variables.css">
-    <link rel="stylesheet" href="../css/main.css">
-      <link rel="stylesheet" href="../css/pages/contact-us.css">
+    <link rel="stylesheet" href="../CSS/variables.css">
+    <link rel="stylesheet" href="../CSS/main.css">
+      <link rel="stylesheet" href="../CSS/pages/contact-us.css">
 </head>
 
 <body>
