--- a/pages/test-env.html
+++ b/pages/test-env.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us - LHOK</title>
-    <link rel="stylesheet" href="../CSS/variables.css">
-    <link rel="stylesheet" href="../CSS/main.css">
+    <link rel="stylesheet" href="../css/variables.css">
+    <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="gridtest.css">
     <style>
         /* Adding the grid-item styles so you can see the grid cells */
