--- a/pages/home.html
+++ b/pages/home.html
@@ -24,8 +24,8 @@
 <div id="header-placeholder"></div>
 <!-- Header section ends -->
 
-<body>
     <div class="container">
+        
         <div class="welcome-card">
             <div class="header">
                 <h1 id="welcome-message">Hello, Friend! 👋</h1>
@@ -66,6 +66,6 @@
 <div id="footer-placeholder"></div>
 <!-- Footer section ends -->
 
-    <script type="module" src="home.js"></script>
+    <script type="module" src="../js/home.js"></script>
 </body>
 </html>
