--- a/pages/home.html
+++ b/pages/home.html
@@ -66,6 +66,8 @@
 <div id="footer-placeholder"></div>
 <!-- Footer section ends -->
 
+
+    <script src="../js/components.js"></script>
     <script type="module" src="../js/home.js"></script>
 </body>
 </html>
