--- a/pages/login.html
+++ b/pages/login.html
@@ -80,6 +80,8 @@
 <!-- Footer section starts -->
 <div id="footer-placeholder"></div>
 <!-- Footer section ends -->
+    
+    <script src="../js/components.js"></script>
     <!-- Firebase SDK -->
     <script type="module" src="../js/firebase-auth.js"></script>
 </body>
