Hunain  comments on json code files

--- a/pages/login.html
+++ b/pages/login.html
@@ -19,12 +19,9 @@
 
 
 <body>
-
 <!-- Header section starts -->
 <div id="header-placeholder"></div>
 <!-- Header section ends -->
-
-
     <div class="container">
         <div class="auth-card">
             <h2 id="auth-title">Sign In</h2>
@@ -32,8 +29,10 @@
             <div id="error-message" class="error-message hidden"></div>
 
             <div id="auth-form">
+                
                 <!-- Sign Up Only Fields -->
                 <div id="name-fields" class="hidden">
+                    <h1>Sign Up</h1>
                     <div class="form-group">
                         <label>First Name</label>
                         <input type="text" id="first-name" class="form-input">
