--- a/pages/angie-test.html
+++ b/pages/angie-test.html
@@ -4,34 +4,8 @@
 
 <p>Resize the window to see the layout change!</p>
 <div class="container">
-  <div class="header">
-    <p>Header</p>
-  </div>
-  
-  <div class="left-sidebar">
-    <p>Left Sidebar</p>
-    <ul>
-      <li>one</li>
-      <li>two</li>
-      <li>three</li>
-    </ul>
-  </div>
-
-  <div class="content">
-    <p>This is some content!</p>
-    <p>This is some more content.</p>
-  </div>
-  
-  <div class="right-sidebar">
-    <p>Right Sidebar</p>
-    <ul>
-      <li>one</li>
-      <li>two</li>
-      <li>three</li>
-    </ul>
-  </div>
-  
-  <div class="footer">
-    <p>Footer</p>
-  </div>
+  <div class="red">one</div>
+  <div class="blue">two</div>
+  <div class="green">three</div>
+  <div class="yellow">four</div>
 </div>
