--- a/pages/angie-test.html
+++ b/pages/angie-test.html
@@ -1,9 +1,19 @@
+<!DOCTYPE html>
+<html lang="en">
 
-<link rel="stylesheet" href="../css/angie-test.css">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contact Us</title>
+    
+    <link rel="stylesheet" href="../css/main.css">
 
+
+</head>
 
 <p>Resize the window to see the layout change!</p>
-<div class="container">
+
+<div class="container-test">
   <div class="red">one</div>
   <div class="blue">two</div>
   <div class="green">three</div>
