--- a/pages/angie-test.html
+++ b/pages/angie-test.html
@@ -1,17 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Us</title>
-    
-    <link rel="stylesheet" href="../css/main.css">
-
-
-</head>
-
-<p>Resize the window to see the layout change!</p>
+<link rel="stylesheet" href="../css/layout/angie-test.css">
 
 <div class="container-test">
   <div class="red">one</div>
