--- a/pages/angie-test.html
+++ b/pages/angie-test.html
@@ -1,9 +1,37 @@
 
 <link rel="stylesheet" href="../css/layout/angie-test.css">
 
-<div class="container-test">
-  <div class="red">one</div>
-  <div class="blue">two</div>
-  <div class="green">three</div>
-  <div class="yellow">four</div>
+<div class="container">
+  <div class="header">
+    <p>Header</p>
+  </div>
+  
+  <div class="middle">
+    <div class="left-sidebar">
+      <p>Left Sidebar</p>
+      <ul>
+        <li>one</li>
+        <li>two</li>
+        <li>three</li>
+      </ul>
+    </div>
+
+    <div class="content">
+      <p>This is some content!</p>
+      <p>This is some more content.</p>
+    </div>
+
+    <div class="right-sidebar">
+      <p>Right Sidebar</p>
+      <ul>
+        <li>one</li>
+        <li>two</li>
+        <li>three</li>
+      </ul>
+    </div>
+  </div>
+  
+  <div class="footer">
+    <p>Footer</p>
+  </div>
 </div>
