--- a/pages/angie-test.html
+++ b/pages/angie-test.html
@@ -1,37 +1,73 @@
+<!DOCTYPE html>
+<html lang="en">
 
-<link rel="stylesheet" href="../css/layout/angie-test.css">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Template Page</title>
 
-<div class="container">
-  <div class="header">
-    <p>Header</p>
-  </div>
-  
-  <div class="middle">
-    <div class="left-sidebar">
-      <p>Left Sidebar</p>
-      <ul>
-        <li>one</li>
-        <li>two</li>
-        <li>three</li>
-      </ul>
-    </div>
+        <!-- Google Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
-    <div class="content">
-      <p>This is some content!</p>
-      <p>This is some more content.</p>
-    </div>
+    <link rel="stylesheet" href="../css/layout/hunain-test copy.css">
+    <link rel="stylesheet" href="../css/main.css">
+</head>
 
-    <div class="right-sidebar">
-      <p>Right Sidebar</p>
-      <ul>
-        <li>one</li>
-        <li>two</li>
-        <li>three</li>
-      </ul>
-    </div>
-  </div>
-  
-  <div class="footer">
-    <p>Footer</p>
-  </div>
-</div>
+<body>
+
+    <!-- Header section starts -->
+    <div id="header-placeholder"></div>
+    <!-- Header section ends -->
+
+    <main>   <!-- Main content -->
+
+        <div class="container4by4">
+        
+            <div class="first-left-bar-1101">
+                <p>Left Sidebar</p>
+                <ul>
+                <li>one</li>
+                <li>two</li>
+                <li>three</li>
+                <li>one</li>
+                <li>two</li>
+                <li>three</li>
+                <li>two</li>
+                <li>three</li>
+                <li>one</li>
+                <li>two</li>
+                <li>three</li>
+                <li>one</li>
+                <li>two</li>
+                <li>three</li>
+                <li>two</li>
+                <li>three</li>
+                </ul>
+            </div>
+
+            <div class="second-left-bar-1101">
+                <p>This is some content!</p>
+                <p>This is some more content.</p>
+            </div>
+
+            <div class="second-right-bar-1101">
+                <p>This is some content!</p>
+                <p>This is some more content.</p>
+            </div>
+        
+        </div>
+    </main>
+
+        <!-- Footer section starts -->
+        <div id="footer-placeholder"></div>
+        <!-- Footer section ends -->
+
+        <script src="../js/components.js"></script>
+        <script src="../js/main.js"></script>
+
+
+</body>
+
+</html>
