hunain - implemented <main> on all HTML pages

--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -21,16 +21,17 @@
 <div id="header-placeholder"></div>
 <!-- Header section ends -->
 
+<main>
 <!-- Main content -->
-<div class="page-container">
-  <div class="content-wrapper">
-    <div class="text-section">
-      <h1 class="title-text">About Lhok</h1>
-      <p class="normal-text">We aim to link beauty industry professionals to local clients seeking their services. Bridging the gap between clients lhoking for seamless and convenient service bookings while simultaneously empowering professionals to expand their businesses with simplified booking, intuitive maps and reliable reviews.</p>
+  <div class="page-container">
+    <div class="content-wrapper">
+      <div class="text-section">
+        <h1 class="title-text">About Lhok</h1>
+        <p class="normal-text">We aim to link beauty industry professionals to local clients seeking their services. Bridging the gap between clients lhoking for seamless and convenient service bookings while simultaneously empowering professionals to expand their businesses with simplified booking, intuitive maps and reliable reviews.</p>
+      </div>
     </div>
   </div>
-</div>
-
+</main>
 <!-- Footer section starts -->
 <div id="footer-placeholder"></div>
 <!-- Footer section ends -->
