--- a/pages/home.html
+++ b/pages/home.html
@@ -24,6 +24,7 @@
 <div id="header-placeholder"></div>
 <!-- Header section ends -->
 
+<main>
     <div class="container">
         
         <div class="welcome-card">
@@ -62,6 +63,7 @@
             <button id="sign-out-button" class="btn btn-signout">Sign Out</button>
         </div>
     </div>
+</main>
 <!-- Footer section starts -->
 <div id="footer-placeholder"></div>
 <!-- Footer section ends -->
