--- a/pages/hunain-test.html
+++ b/pages/hunain-test.html
@@ -21,7 +21,9 @@
 <div id="header-placeholder"></div>
 <!-- Header section ends -->
 
+<main>
 <!-- Main content -->
+</main>
 
 <!-- Footer section starts -->
 <div id="footer-placeholder"></div>
