--- a/pages/login.html
+++ b/pages/login.html
@@ -13,8 +13,6 @@
 
     
     <link rel="stylesheet" href="../css/main.css">
-
-
 </head>
 
 
@@ -22,6 +20,8 @@
 <!-- Header section starts -->
 <div id="header-placeholder"></div>
 <!-- Header section ends -->
+
+<main>
     <div class="container">
         <div class="auth-card">
             <h2 id="auth-title">Sign In</h2>
@@ -76,6 +76,10 @@
             </div>
         </div>
     </div>
+
+</main>
+
+
 <!-- Footer section starts -->
 <div id="footer-placeholder"></div>
 <!-- Footer section ends -->
