Angie test change

--- a/pages/about-us-rough.html
+++ b/pages/about-us-rough.html
@@ -27,7 +27,7 @@
 
                     
         
-            <div class="middle-container">
+            <div class="B1-C1">
                 <h1>About Us</h1>
                 <p>We aim to link beauty industry professionals to local clients seeking their services. Bridging the 
                     gap between clients lhoking for seamless and 
