hunain, removed page css imports in main.css
now page specfic css's must be called in respective html pages

--- a/pages/privacy-policy.html
+++ b/pages/privacy-policy.html
@@ -12,7 +12,7 @@
 
 
     <link rel="stylesheet" href="../css/main.css">
-    
+    <link rel="stylesheet" href="../css/pages/privacy-policy.css">    
   
     <style>
         .page-container {
