--- a/pages/contact-us-rough.html
+++ b/pages/contact-us-rough.html
@@ -13,6 +13,7 @@
 
     <link rel="stylesheet" href="../css/layout/hunain-test copy.css">
     <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../css/pages/contact-us.css">
 </head>
 
 <body>
