--- a/pages/contact-us.html
+++ b/pages/contact-us.html
@@ -13,6 +13,8 @@
 
     
     <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../css/pages/contact-us.css">
+    <link rel="stylesheet" href="../css/pages/privacy-policy.css"> 
 
 
 </head>
