--- a/pages/terms-and-conditions.html
+++ b/pages/terms-and-conditions.html
@@ -11,7 +11,7 @@
     
 
     <link rel="stylesheet" href="../css/main.css">
-
+    <link rel="stylesheet" href="../css/pages/term-and-conditions.css">
 
 
     <style>
