--- a/pages/contact-us.html
+++ b/pages/contact-us.html
@@ -24,17 +24,22 @@
 <!-- Header section starts -->
 <div id="header-placeholder"></div>
 <!-- Header section ends -->
-<main>
-    <!-- Main content -->
-    <div class="page-container">  <!-- I replaced this with 3 by 3 container -->
-    <div class="content-wrapper"> <!-- I replaced this with just our "OneThree-Two" -->
-        <div class="text-section">
-        <h1 class="title-text">Contact Us</h1>
+
+<body>
+
+    <!-- Header section starts -->
+    <div id="header-placeholder"></div>
+    <!-- Header section ends -->
+
+    <main>   <!-- Main content -->
+        <div class="container3by3">
+            <div class="OneThree-Two">
+                <div class="text-section">
+                    <h1 class="title-text">Contact Us</h1>
         <p class="normal-text">Have questions? We'd love to hear from you. Send us a message and we'll respond as soon as possible.</p>
         <p class="normal-text">Follow us on Instagram to stay updated with the latest news and join our waitlist!</p>
-        </div>
-
-        <!-- FORM STARTS HERE -->
+                
+           <!-- FORM STARTS HERE -->
         <form id="contactForm" class="contact-form">
             
             <!-- Success/Error Message Area -->
@@ -115,9 +120,8 @@
         </form>
         <!-- FORM ENDS HERE -->
 
-    </div>
-    </div>
-</main>
+    </main>
+
 <!-- Footer section starts -->
 <div id="footer-placeholder"></div>
 <!-- Footer section ends -->
