hunain - updated template page

--- a/pages/template-page.html
+++ b/pages/template-page.html
@@ -22,7 +22,13 @@
 <!-- Header section ends -->
 
 <main>
-<!-- Main content -->
+    <div class = "">  <!-- This is an optional page specific class that does not need to be explicitly defined-->
+       <div class="container3by3"> <!-- or container4by4-->
+        <div class = ""> <!-- container specific class-->
+            <!-- main content here -->
+        </div>
+       </div>
+    </div>
 </main>
 
 <!-- Footer section starts -->
