--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -41,7 +41,7 @@
                  <div class="Waves_Icon">
                     <img src="../Media/Waves_Icon.svg" alt="Waves Icon">
                 </div>
-                <h2>Our Mission</h2>
+                <h2><em>Our Mission</em></h2>
                 <p>Our mission is all about fostering 
                     connections to empower both 
                     professionals and clients alike. 
@@ -56,7 +56,7 @@
                  <div class="Waves_Icon">
                     <img src="../Media/Waves_Icon.svg" alt="Waves Icon">
                 </div>
-                <h2>Why Lhok?</h2>
+                <h2><em>Why Lhok?</em></h2>
                 <p>Say hello to simplicity: finding beauty 
                     service professionals made easy with 
                     clear service details, transparent 
@@ -67,7 +67,7 @@
                  <div class="Waves_Icon">
                     <img src="../Media/Waves_Icon.svg" alt="Waves Icon">
                 </div>
-                <h2>Community</h2>
+                <h2><em>Community</em></h2>
                 <p>We're dedicated to linking you with 
                     genuine local connections, whether 
                     you're passionate about supporting 
