--- a/pages/contact-us.html
+++ b/pages/contact-us.html
@@ -35,10 +35,10 @@
         <div class="container3by3">
             <div class="OneThree-Two">
                 <div class="text-section">
-                    <h1 class="title-text">Contact Us</h1>
+                    <h1>Contact Us</h1>
         <p class="normal-text">Have questions? We'd love to hear from you. Send us a message and we'll respond as soon as possible.</p>
         <p class="normal-text">Follow us on Instagram to stay updated with the latest news and join our waitlist!</p>
-                
+        <p class="normal-text">Follow us on Instagram to stay updated with the latest news and join our waitlist!</p>        
            <!-- FORM STARTS HERE -->
         <form id="contactForm" class="contact-form">
             
