--- a/pages/privacy-policy-rough.html
+++ b/pages/privacy-policy-rough.html
@@ -25,7 +25,7 @@
     <main>   <!-- Main content -->
         <div class="container3by3">
             <div class="OneThree-Two">
-              <h1 class="title-text">Privacy Policy</h1>
+              <h1>Privacy Policy</h1>
         
     
              </div>
