--- a/pages/privacy-policy.html
+++ b/pages/privacy-policy.html
@@ -33,7 +33,7 @@
             display: block !important;
         }
         
-        .title-text {
+        .h1 {
             font-size: 48px;
             font-weight: bold;
             margin-bottom: 60px;
@@ -74,7 +74,7 @@
   <div class="page-container">
     <div class="content-wrapper">
       <div class="text-section">
-        <h1 class="title-text">Privacy Policy</h1>
+        <h1>Privacy Policy</h1>
         
         <div class="terms-content">
           <p class="normal-text">
