--- a/pages/style-sheet.html
+++ b/pages/style-sheet.html
@@ -30,7 +30,7 @@
 
             <h1>1,1 - This is our Title Text</h1>
             <div class = single-4by4-cell> 1,2 This is <em>not</em> imporant</div>
-            <div class = single-4by4-cell> 1,3 </div>
+            <div class = "OneTwo-OneThree"> 1,3asdf  </div>
 
             <div class = single-4by4-cell> 2,1 </div>
             <div class = single-4by4-cell> 2,2 </div>
