Hunain - Promoted privacy and policy

--- a/pages/contact-us.html
+++ b/pages/contact-us.html
@@ -37,8 +37,8 @@
             <div class="OneThree-Two">
                 <div class="text-section">
                     <h1>Contact Us</h1>
-        <p class="normal-text">Have questions? We'd love to hear from you. Send us a message and we'll respond as soon as possible.</p>
-        <p class="normal-text">Follow us on Instagram to stay updated with the latest news and join our waitlist!</p>
+        <p>Have questions? We'd love to hear from you. Send us a message and we'll respond as soon as possible.</p>
+        <p>Follow us on Instagram to stay updated with the latest news and join our waitlist!</p>
  
            <!-- FORM STARTS HERE -->
         <form id="contactForm" class="contact-form">
