hunain - work in progress o refactoring index.html

--- a/pages/contact-us.html
+++ b/pages/contact-us.html
@@ -33,6 +33,7 @@
     <!-- Header section ends -->
 
     <main>   <!-- Main content -->
+        <div class = "contact-us">
         <div class="container3by3">
             <div class="OneThree-Two">
                 <div class="text-section">
@@ -120,7 +121,7 @@
             </button>
         </form>
         <!-- FORM ENDS HERE -->
-
+        </div>
     </main>
 
 <!-- Footer section starts -->
