--- a/pages/template-page.html
+++ b/pages/template-page.html
@@ -22,7 +22,7 @@
 <!-- Header section ends -->
 
 <main>
-    <div class = "">  <!-- This is an optional page specific class that does not need to be explicitly defined-->
+    <div class = "">  <!-- This is an page specific class that does not need to be explicitly defined-->
        <div class="container3by3"> <!-- or container4by4-->
         <div class = ""> <!-- container specific class-->
             <!-- main content here -->
