--- a/pages/login.html
+++ b/pages/login.html
@@ -22,6 +22,7 @@
 <!-- Header section ends -->
 
 <main>
+    <div class="login">
     <div class="container3by3">
         <div class="OneThree-Two">
             <div class="contact-form">
@@ -78,7 +79,7 @@
             </div>
         </div>
     </div>
-
+</div>
 </main>
 
 
