--- a/pages/style-sheet.html
+++ b/pages/style-sheet.html
@@ -25,21 +25,27 @@
 
 
 
-        <div class="container4by4">
-
+        <div class="container4by4" >
 
             <h1>1,1 - This is our Title Text</h1>
-            <div class = single-4by4-cell> 1,2 This is <em>not</em> imporant</div>
-            <div class = "OneTwo-OneThree"> 1,3asdf  </div>
-
-            <div class = single-4by4-cell> 2,1 </div>
-            <div class = single-4by4-cell> 2,2 </div>
-            <div class = single-4by4-cell> 2,3 </div>
-
-            <div class = single-4by4-cell> 3,1 </div>
-            <div class = single-4by4-cell> 3,2 </div>
-            <div class = single-4by4-cell> 3,3 </div>
-
+            <h2>1,2 - This is Our Subheading 2</h2>
+            <h3> 1,3 - This is Our Subheading 3</h3>
+            <h4> 1,4 - There are more (Heading 4)</h4>
+            <h5> 1,4 - But I dont suspect we will use them (Heading 5)</h4>
+            <h6>2,1 - Heading 6 </h5>
+            <p> 2,2 - Normal text is &lt;p&gt;</p>
+            <p> 2,3 - In HTML You can &lt;strong&gt;<strong>BOLD</strong>&lt;strong&gt; and &lt;em&gt;<em>emphasize</em>&lt;em&gt; using these symbols</p>
+            <ol class="text-left"><!-- the additional class is a "override" by adding a text alignment utility class made in typography.css-->
+                <li>List Item 1</li>
+                <li>Cant be a picture<img src="Media/image4.jpg" alt="Beauty service 4"></li>
+                <li><a href="/contact">can be a link aswell to contacts</a></li>
+            </ol>
+            
+            <ul class="text-left"><!-- the additional class is a "override" by adding a text alignment utility class made in typography.css-->
+                <li>Can be bullet too</li>
+                <li>Cant be a picture<img src="Media/image4.jpg" alt="Beauty service 4"></li>
+                <li><a href="/contact">can be a link aswell to contacts</a></li>
+            </ul>
         </div>
 <!-- Lorem ipsum dolor sit amet consectetur adipiscing elit. Sit amet consectetur adipiscing elit quisque faucibus ex. Adipiscing elit quisque faucibus ex sapien vitae pellentesque. -->
 <!-- Lorem ipsum dolor sit amet -->
