--- a/pages/contact-us.html
+++ b/pages/contact-us.html
@@ -115,7 +115,8 @@
             </div>
 
             <!-- Submit Button -->
-            <button type="submit" class="submit-btn" id="submitBtn">
+            <button type="submit" class="submit-btn" id="submitBtn"> 
+                <!-- This needs to be standard, button does not match the index page-->
                 <span class="btn-text">Send Message</span>
                 <span class="btn-loader" style="display: none;">●●●</span>
             </button>
