--- a/pages/style-sheet.html
+++ b/pages/style-sheet.html
@@ -46,6 +46,7 @@
                 <li>Cant be a picture<img src="Media/image4.jpg" alt="Beauty service 4"></li>
                 <li><a href="/contact">can be a link aswell to contacts</a></li>
             </ul>
+            <h1 class = "text-brand text-left"> Stack classes with spaces within the quotes </h1>
         </div>
 <!-- Lorem ipsum dolor sit amet consectetur adipiscing elit. Sit amet consectetur adipiscing elit quisque faucibus ex. Adipiscing elit quisque faucibus ex sapien vitae pellentesque. -->
 <!-- Lorem ipsum dolor sit amet -->
