--- a/pages/contact-us.html
+++ b/pages/contact-us.html
@@ -18,8 +18,8 @@
 
 
 </head>
-<!-- Hunain -->
-<!-- Angeleen -->
+
+
 <body>
 
 <!-- Header section starts -->
@@ -33,6 +33,7 @@
     <!-- Header section ends -->
 
     <main>   <!-- Main content -->
+        <div class="extra-space"></div>
         <div class = "contact-us">
         <div class="container3by3">
             <div class="OneThree-Two">
