--- a/pages/contact-us.html
+++ b/pages/contact-us.html
@@ -13,9 +13,6 @@
 
     
     <link rel="stylesheet" href="../css/main.css">
-    <link rel="stylesheet" href="../css/pages/contact-us.css">
-    <link rel="stylesheet" href="../css/pages/privacy-policy.css"> 
-
 
 </head>
 
@@ -43,7 +40,7 @@
         <p>Follow us on Instagram to stay updated with the latest news and join our waitlist!</p>
  
            <!-- FORM STARTS HERE -->
-        <form id="contactForm" class="contact-form">
+        <form id="contactForm" class="basic-form-1">
             
             <!-- Success/Error Message Area -->
             <div id="formMessage" class="message"></div>
