--- a/pages/login.html
+++ b/pages/login.html
@@ -25,8 +25,8 @@
     <div class="login">
     <div class="container3by3">
         <div class="OneThree-Two">
-            <div class="contact-form">
-                <h2 id="auth-title">Sign In</h2>
+            <div class="basic-form-1">
+                <h1 id="auth-title">Sign In</h1>
 
                 <div id="error-message" class="error-message hidden"></div>
 
@@ -34,26 +34,43 @@
                     
                     <!-- Sign Up Only Fields -->
                     <div id="name-fields" class="hidden">
-                        <h1>Sign Up</h1>
+
                         <div class="form-group">
                             <label>First Name</label>
-                            <input type="text" id="first-name" class="form-input">
+                            <input 
+                                type="text" 
+                                id="first-name" 
+                                class="form-input"
+                                placeholder = "First Name">
                         </div>
                         <div class="form-group">
                             <label>Last Name</label>
-                            <input type="text" id="last-name" class="form-input">
+                            <input 
+                                type="text" 
+                                id="last-name" 
+                                class="form-input"
+                                placeholder = "Last Name">
                         </div>
                     </div>
 
                     <!-- Email & Password (Both) -->
                     <div class="form-group">
                         <label>Email</label>
-                        <input type="email" id="email" class="form-input">
+                        <input 
+                            type="email" 
+                            id="email" 
+                            class="form-input"
+                            placeholder = "Enter email address">
+                            
                     </div>
 
                     <div class="form-group">
                         <label>Password</label>
-                        <input type="password" id="password" class="form-input">
+                        <input 
+                        type="password" 
+                        id="password" 
+                        class="form-input"
+                        placeholder = "Enter password">
                     </div>
 
                     <button id="auth-button" class="btn btn-primary">Sign In</button>
