Hunain - created profile update page, testing updating not working

--- a/pages/home.html
+++ b/pages/home.html
@@ -51,8 +51,8 @@
                         </div>
                     
                 
-                    <h2>You're all set! ✅</h2>
-                    <p>You can now use this authentication throughout your website.</p>
+                    <h2>You can now add to your profile.</h2>
+                    <button onclick="window.location.href='profile-update.html'"" class="custom-button">Modify Profile</button>
                 <button id="sign-out-button" class="btn btn-signout">Sign Out</button>
             </div>
         </div>
