Hunain - updates to profile update

--- a/pages/profile-update.html
+++ b/pages/profile-update.html
@@ -12,7 +12,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
     
+    <link rel="stylesheet" href="../css/layout/hunain-test copy.css">
     <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../css/pages/page-specifc.css">
+
 </head>
 
 <body>
@@ -32,8 +35,9 @@
         
         <!-- User email display -->
         <div class="user-info">
-            <strong>Logged in as:</strong> <span id="userEmail">Loading...</span>
+            <strong>Logged in as:</strong> <span id="userEmailmessage">Loading...</span>
         </div>
+        <h1 id="userEmail-message">Hello, Friend! 👋</h1>
 
         <!-- Profile form -->
         <form id="profileUpdateForm" class = "basic-form-1">
@@ -92,7 +96,7 @@
     <script src="../js/components.js"></script>
     <script src="../js/main.js"></script>
     <!-- Utilized to hook up profile -->
-    <script type="module" src="profile.js"></script>
+    <script type="module" src="profile-update.js"></script>
 </body>
 
 </html>
