Hunain - Profile updates first working test

--- a/pages/profile-update.html
+++ b/pages/profile-update.html
@@ -96,7 +96,7 @@
     <script src="../js/components.js"></script>
     <script src="../js/main.js"></script>
     <!-- Utilized to hook up profile -->
-    <script type="module" src="profile-update.js"></script>
+    <script type="module" src="../js/profile-update.js"></script>
 </body>
 
 </html>
