Hunain - professional public profile auto population working

--- a/pages/public-profiles.html
+++ b/pages/public-profiles.html
@@ -19,7 +19,7 @@
 <!-- Header section ends -->
 
 <main>   <!-- Main content -->
-<div class="professional-hub">
+<div class="public-profiles">
 <div class="container3by3">
 <div class="One-Two">
     <div>
@@ -38,7 +38,7 @@
 
 <script src="../js/components.js"></script>
 <script src="../js/main.js"></script>
-<script type="module" src="../js/professional-hub.js"></script>
+<script type="module" src="../js/public-profiles.js"></script>
 </main>
 
 <!-- Footer section starts -->
