Hunain - admin public profile approval fix 2

--- a/pages/contact-us.html
+++ b/pages/contact-us.html
@@ -40,7 +40,7 @@
         <p>Follow us on Instagram to stay updated with the latest news and join our waitlist!</p>
  
            <!-- FORM STARTS HERE -->
-        <form id="contactForm" class="3">
+        <form id="contactForm" class="basic-form-1">
             
             <!-- Success/Error Message Area -->
             <div id="formMessage" class="message"></div>
